thead spacing fixed

--- a/css/table-main.css
+++ b/css/table-main.css
@@ -103,6 +103,10 @@ iframe {
   border: none !important;
 }
 
+.noBorder {
+  border: none !important;
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ Scroll bar ]*/
 .js-pscroll {
@@ -187,11 +191,15 @@ table {
   width: 100%;
 }
 
+th {
+  padding-left: 2rem !important;
+}
+
 th,
 td {
 
   font-weight: unset;
-  padding-right: 10px;
+  /* padding-right: 10px; */
 }
 
 
@@ -243,6 +251,11 @@ td {
   padding: 0.75rem 0;
 
 } */
+.table100-body {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 
 .table100-body td {
   padding-top: 16px;
@@ -253,7 +266,7 @@ td {
 [ Fix header ]*/
 .table100 {
   position: relative;
-  padding-top: 35px;
+  padding-top: 24px;
 }
 
 .table100-head {
@@ -278,7 +291,7 @@ td {
   border: none !important;
   font-size: 0.6rem;
   text-align: center;
-  /* padding-left: 0.6rem; */
+  padding-left: 0.75rem;
   color: #fff;
   line-height: 1.4;
 
@@ -295,10 +308,14 @@ td {
 
 @media only screen and (min-width : 480px) {
 
+  .table100 {
+    position: relative;
+    padding-top: 29px;
+  }
 
   .table100.ver1 th {
     font-family: var(--titleFont);
-    font-size: 0.9rem;
+    font-size: 0.5rem;
     text-align: left;
     padding-left: 0.6rem;
     color: #fff;
@@ -316,14 +333,16 @@ td {
   }
 }
 
+
+
 @media only screen and (min-width : 768px) {
   .table100-body {
-    padding-top: 7px;
+    padding-top: 9px;
   }
 
   .table100.ver1 th {
     font-family: var(--titleFont);
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-align: left;
     padding-left: 0.75rem;
     color: #fff;
@@ -343,7 +362,7 @@ td {
 
 @media only screen and (min-width : 900px) {
   .table100-body {
-    padding-top: 0.7rem;
+    padding-top: 0.6rem;
   }
 
   .table100-body td {
@@ -354,7 +373,7 @@ td {
 
   .table100.ver1 th {
     font-family: var(--titleFont);
-    font-size: 1rem;
+    font-size: 0.7rem;
     text-align: left;
     padding-left: 0.75rem;
     color: #fff;
@@ -374,7 +393,7 @@ td {
 
 @media only screen and (min-width : 1100px) {
   .table100-body {
-    padding-top: 0.8rem;
+    padding-top: 1.1rem;
   }
 
   .table100-body td {
@@ -386,7 +405,7 @@ td {
   .table100.ver1 th {
     font-family: var(--titleFont);
     font-size: 1.1rem;
-    text-align: left;
+    text-align: center;
     padding-left: 0.6rem;
     color: #fff;
     line-height: 1.4;
